welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: missing arguments for method in1020 in class max1020;
follow this method with `_' if you want to treat it as a partially applied function
  if (!in1020){
       ^max1020:5: error: missing arguments for method in1020 in class max1020;
follow this method with `_' if you want to treat it as a partially applied function
  if (in1020){
      ^max1020:13: error: missing arguments for method bin1020 in class max1020;
follow this method with `_' if you want to treat it as a partially applied function
  if (bin1020){
      ^