welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if (!in1020){
    return 0
  }
  if (in1020){
    if (a>b){
      return a
    }
    else{
      return b
    }
  }
  if (bin1020){
    return b
  }
  else {
    return a 
  }
  
} 
  
  
  
  
  
def in1020(a:Int, b:Int):Boolean = {
  if ((10<=a && a<=20)&&(10<=b && b<=20)){
    return true
  }
  else{
    return false
  }
}

def ain1020(a:Int, b:Int):Boolean = {
  if ((10<=a && a<=20)&&(10>b || b>20)){
    return true
  }
  else{
    return false
  }
}

def bin1020(a:Int, b:Int):Boolean = {
  if ((10>a || a>20)&&(10<=b && b<=20)){
    return true
  }
  else{
    return false
  }
}